--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "source.fixAll": "always",
     "source.organizeImports": "always",
   },
+  "editor.wordWrap": "on",
   "editor.fontLigatures": true,
   "editor.fontSize": 18,
   "editor.letterSpacing": 0.4,
