--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,25 @@
   "workbench.iconTheme": "symbols",
   "workbench.productIconTheme": "fluent-icons",
   "npm.packageManager": "npm",
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "always",
-    "source.fixAll": "always",
-    "source.organizeImports": "always",
+    // "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit",
   },
   "editor.wordWrap": "on",
   "editor.fontLigatures": true,
   "editor.fontSize": 18,
   "editor.letterSpacing": 0.4,
   "editor.lineHeight": 2,
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome",
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome",
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome",
+  },
   "symbols.folders.associations": {
     "data": "folder-database",
     "seed": "folder-providers",
