--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,9 @@
   "npm.packageManager": "npm",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    // "quickfix.biome": "explicit",
+    "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit",
+    "source.removeUnusedImports": "explicit"
   },
   "editor.wordWrap": "on",
   "editor.fontLigatures": true,
