update ignore patterns in biome.json and add orval command to package.json

--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,8 @@
 		"ignoreUnknown": false,
 		"ignore": [
 			"**/node_modules/**",
-			"**/globals.css"
+			"**/globals.css",
+			"**/http/api.ts"
 		]
 	},
 	"formatter": {
